Se terminan de crear las entidades y se añade endpoint para obtener personas